# Game_OpenGL

./: .gitignore  CMakeLists.txt
include/: Fragment_shader.h  Vao.h  Vbo.h  Vertex_shader.h  draw_vertices.h  fragment_shader.h  glad.h  main.h  program.h  shaders.h  vao.h  vbo.h  vertex_shader.h
src/: draw_vertices.cpp  fragment_shader.cpp  main.cpp  program_shader.cpp  shaders.cpp  vao.cpp  vbo.cpp  vertex_shader.cpp
